--- a/basic/package.json
+++ b/basic/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.4",
     "vue": "^2.5.13"
   },
   "devDependencies": {
