--- a/advanced-fine-grained-components/package.json
+++ b/advanced-fine-grained-components/package.json
@@ -21,6 +21,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-vue-jsx": "^3.5.1",
     "vue-loader": "^13.7.0",
     "webpack": "^3.10.0"
@@ -29,12 +31,16 @@
     "env": {
       "development": {
         "plugins": [
-          "transform-vue-jsx"
+          "transform-vue-jsx",
+          "transform-decorators-legacy",
+          "transform-class-properties"
         ]
       },
       "production": {
         "plugins": [
-          "transform-vue-jsx"
+          "transform-vue-jsx",
+          "transform-decorators-legacy",
+          "transform-class-properties"
         ]
       }
     }
