--- a/advanced-fine-grained-components/package.json
+++ b/advanced-fine-grained-components/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-vue-jsx": "^3.5.1",
     "vue-loader": "^13.7.0",
+    "vue-property-decorator": "^6.0.0",
     "webpack": "^3.10.0"
   },
   "babel": {
