--- a/ssr/package.json
+++ b/ssr/package.json
@@ -13,6 +13,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "global": "^4.3.2",
+    "now": "^9.2.7",
     "nuxt": "^1.0.0",
     "tachyons": "^4.9.1"
   },
